--- a/vue/package.json
+++ b/vue/package.json
@@ -14,6 +14,7 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.3.3",
     "@vitejs/plugin-vue": "^2.2.0",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.7",
